--- a/templates/budgets/budgetitem_detail.html
+++ b/templates/budgets/budgetitem_detail.html
@@ -1,4 +1,5 @@
 {% extends "_base.html" %}
+{% load static %}
 
 {% block header %}
     <h1 class="page-title">{{budget_item.category}} - {{budget_item.monthly_budget.date|date:"F-Y"}}</h1>
@@ -19,9 +20,7 @@
         <div class="card-table-heading">Amount</div>
         <div class="card-table-heading">Source</div>
         <div class="card-table-heading">Location</div>
-        <div class="card-table-heading">Category</div>
-        <div class="card-table-heading">Edit</div>
-        <div class="card-table-heading">Delete</div>
+        <div class="card-table-heading"></div>
     </div>
     {% for purchase in purchases %}
 
@@ -31,9 +30,12 @@
         <div>${{purchase.amount}}</div>
         <div>{{purchase.source}}</div>
         <div>{{purchase.location}}</div>
-        <div>{{purchase.category}}</div>
-        <div><a href='{% url "purchase_edit" pk=purchase.id %}?next={{request.path|urlencode}}'>Edit</a></div>
-        <div><a href='{% url "purchase_delete" pk=purchase.id %}?next={{request.path|urlencode}}'>Delete</a></div>
+        <div>
+            <div class="edit-links-container">
+                <a href='{% url "purchase_edit" pk=purchase.id %}?next={{request.path|urlencode}}'><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></a>
+                <a href='{% url "purchase_delete" pk=purchase.id %}?next={{request.path|urlencode}}'><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px"></a>
+            </div>
+        </div>
     </div>
 
     {% endfor %}
