--- a/templates/budgets/monthly_budget_detail.html
+++ b/templates/budgets/monthly_budget_detail.html
@@ -64,10 +64,12 @@
             <div>${{budget_item.amount}}</div>
             <div>${{budget_item.spent}}</div>
             <div>${{budget_item.diff}}</div>
-            <div><a href='{% url "budgetitem_edit" year=monthly_budget.date.year month=monthly_budget.date.month category=budget_item.category.name %}'><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></a></div>
-            <div><a href='{% url "budget_item_delete" year=monthly_budget.date.year month=monthly_budget.date.month category=budget_item.category.name %}'><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px"></a></div>
-            <div></div>
-            <div></div>
+            <div>
+                <div class="edit-links-container">
+                    <a href='{% url "budgetitem_edit" year=monthly_budget.date.year month=monthly_budget.date.month category=budget_item.category.name %}'><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></a>
+                    <a href='{% url "budget_item_delete" year=monthly_budget.date.year month=monthly_budget.date.month category=budget_item.category.name %}'><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px"></a>
+                </div>
+            </div>
 
             {% endfor %}
         </div>
@@ -101,10 +103,12 @@
         <div>${{savings_item.amount}}</div>
         <div>${{savings_item.saved}}</div>
         <div>${{savings_item.diff}}</div>
-        <div><a href='{% url "budgetitem_edit" year=monthly_budget.date.year month=monthly_budget.date.month category=savings_item.category.name %}'><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></a></div>
-        <div><a href='{% url "budget_item_delete" year=monthly_budget.date.year month=monthly_budget.date.month category=savings_item.category.name %}'><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px"></a></div>
-        <div></div>
-        <div></div>
+        <div>
+            <div class="edit-links-container">
+                <a href='{% url "budgetitem_edit" year=monthly_budget.date.year month=monthly_budget.date.month category=savings_item.category.name %}'><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></a>
+                <a href='{% url "budget_item_delete" year=monthly_budget.date.year month=monthly_budget.date.month category=savings_item.category.name %}'><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px"></a>
+            </div>
+        </div>
         {% endfor %}
     </div>
 
@@ -115,7 +119,7 @@
         <div class="card-table-subtotal">${{total_savings_remaining.amount}}</div>
         <div></div>
     </div>
-    <div class="budget-horizontal-grid-monthly card-table-header">
+    <div class="budget-horizontal-grid-monthly card-table-header budget-totals">
         <div class="card-table-heading">Totals</div>
         <div class="card-table-heading">${{total_budgeted}}</div>
         <div class="card-table-heading">${{total_spent}}</div>
@@ -154,18 +158,17 @@
 
 <div class="card-base">
     <h2>Purchases</h2>
-    <div class="purchase-horizontal-grid card-table-header">
+    <div class="purchase-horizontal-grid purchase-horizontal-grid-categories card-table-header">
         <div class="card-table-heading">Date</div>
         <div class="card-table-heading">Item</div>
         <div class="card-table-heading">Amount</div>
         <div class="card-table-heading">Source</div>
         <div class="card-table-heading">Location</div>
         <div class="card-table-heading">Category</div>
-        <div class="card-table-heading">Edit</div>
-        <div class="card-table-heading">Delete</div>
+        <div class="card-table-heading"></div>
     </div>
 
-    <div class="purchase-horizontal-grid">
+    <div class="purchase-horizontal-grid purchase-horizontal-grid-categories">
         {% for purchase in purchases %}
         <div>{{purchase.date}}</div>
         <div>{{purchase.item}}</div>
@@ -173,8 +176,12 @@
         <div>{{purchase.source}}</div>
         <div>{{purchase.location}}</div>
         <div>{{purchase.category}}</div>
-        <div><a href='{% url "purchase_edit" pk=purchase.id %}?next={{request.path|urlencode}}'><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></a></div>
-        <div><a href='{% url "purchase_delete" pk=purchase.id %}?next={{request.path|urlencode}}'><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px"></a></div>
+        <div>
+            <div class="edit-links-container">
+                <a href='{% url "purchase_edit" pk=purchase.id %}?next={{request.path|urlencode}}'><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></a>
+                <a href='{% url "purchase_delete" pk=purchase.id %}?next={{request.path|urlencode}}'><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px"></a>
+            </div>
+        </div>
         {% endfor %}
     </div>
 
