--- a/templates/purchases/purchase_list.html
+++ b/templates/purchases/purchase_list.html
@@ -8,18 +8,17 @@
 {% endblock header %}
 
 {% block body %}
-<div class="purchase-horizontal-grid">
+<div class="purchase-horizontal-grid purchase-horizontal-grid-categories card-table-header">
     <div>Date</div>
     <div>Item</div>
     <div>Amount</div>
     <div>Source</div>
     <div>Location</div>
     <div>Category</div>
-    <div>Edit</div>
-    <div>Delete</div>
+    <div></div>
 </div>
 
-<div class="purchase-horizontal-grid">
+<div class="purchase-horizontal-grid purchase-horizontal-grid-categories">
     {% for purchase in purchases %}
     <div>{{purchase.date}}</div>
     <div>{{purchase.item}}</div>
@@ -27,8 +26,12 @@
     <div>{{purchase.source}}</div>
     <div>{{purchase.location}}</div>
     <div>{{purchase.category}}</div>
-    <div><a href='{% url "purchase_edit" pk=purchase.id %}'><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px" alt="Edit"></a></div>
-    <div><a href='{% url "purchase_delete" pk=purchase.id %}'><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px" alt="Delete"></a></div>
+    <div>
+        <div class="edit-links-container">
+            <a href='{% url "purchase_edit" pk=purchase.id %}?next={{request.path|urlencode}}'><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></a>
+            <a href='{% url "purchase_delete" pk=purchase.id %}?next={{request.path|urlencode}}'><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px"></a>
+        </div>
+    </div>
     {% endfor %}
 </div>
 </div>
