Moved yearly detail logic to Yearly Budget model

--- a/templates/budgets/yearly_budget_detail.html
+++ b/templates/budgets/yearly_budget_detail.html
@@ -32,9 +32,9 @@
         <div>${{total_budgeted}}</div>
         <div class="">${{total_spending_spent}}</div>
         <div class="">${{total_saved}}</div>
-        <div class="">${{total_income.amount}}</div>
-        <div class="">${{total_income_budgeted.amount}}</div>
-        <div class="">${{total_income_category.amount}}</div>
+        <div class="">${{total_income}}</div>
+        <div class="">${{total_income_budgeted}}</div>
+        <div class="">${{total_income_category}}</div>
     </div>
     <div class="summary-horizontal-grid-monthly card-table-header">
         <div class="card-table-heading">Budgeted Income-Budgeted</div>
@@ -82,9 +82,9 @@
         <div class="">${{total_budgeted_ytd}}</div>
         <div class="">${{total_spending_spent_ytd}}</div>
         <div class="">${{total_saved_ytd}}</div>
-        <div class="">${{total_income_ytd.amount}}</div>
-        <div class="">${{total_income_budgeted_ytd.amount}}</div>
-        <div class="">${{total_income_category_ytd.amount}}</div>
+        <div class="">${{total_income_ytd}}</div>
+        <div class="">${{total_income_budgeted_ytd}}</div>
+        <div class="">${{total_income_category_ytd}}</div>
     </div>
     <div class="summary-horizontal-grid-monthly card-table-header">
         <div class="card-table-heading">Budgeted Income-Budgeted YTD</div>
