--- a/templates/purchases/income_delete.html
+++ b/templates/purchases/income_delete.html
@@ -5,20 +5,20 @@
 <div class="card-base">
     <div class="purchase-horizontal-grid card-table-header">
         <div class="card-table-heading">Date</div>
-        <div class="card-table-heading">Item</div>
-        <div class="card-table-heading">Amount</div>
         <div class="card-table-heading">Source</div>
-        <div class="card-table-heading">Location</div>
+        <div class="card-table-heading">Amount</div>
         <div class="card-table-heading">Category</div>
+        <div class="card-table-heading">Notes</div>
+        <div class="card-table-heading"></div>
     </div>
 
     <div class="purchase-horizontal-grid">
-        <div>{{purchase.date}}</div>
-        <div>{{purchase.item}}</div>
-        <div>${{purchase.amount}}</div>
-        <div>{{purchase.source}}</div>
-        <div>{{purchase.location}}</div>
-        <div>{{purchase.category}}</div>
+        <div>{{income.date}}</div>
+        <div>{{income.source}}</div>
+        <div>${{income.amount}}</div>
+        <div>{{income.category}}</div>
+        <div>{{income.notes}}</div>
+        <div></div>
     </div>
 
 </div>
