--- a/static/css/base.css
+++ b/static/css/base.css
@@ -181,9 +181,10 @@ a {
 
 .income-horizontal-grid-monthly {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(5, 1fr) 75px;
     row-gap: 5px;
     padding-left: 10px;
+    margin-bottom: 10px;
 }
 
 .budget-monthly-single-col {
@@ -472,4 +473,22 @@ h2 {
 .edit-links-container {
     display: flex;
     justify-content: space-around;
+}
+
+.delete-single-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.button-delete {
+    background-color: red;
+    border: 1px solid red;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    font-size: 24px;
+    width: fit-content;
 }
