--- a/templates/budgets/budgetitem_edit.html
+++ b/templates/budgets/budgetitem_edit.html
@@ -2,8 +2,10 @@
 
 {% block body %}
 
+<div>{{object.monthly_budget.date|date:"F"}}</div>
 <form class="form-grid" method="POST">
     {% csrf_token %}
+    
     {{form}}
     <button type="submit">Edit</button>
 </form>
