--- a/templates/budgets/monthly_budget_detail.html
+++ b/templates/budgets/monthly_budget_detail.html
@@ -122,7 +122,7 @@
     <div class="budget-horizontal-grid-monthly card-table-header budget-totals">
         <div class="card-table-heading">Totals</div>
         <div class="card-table-heading">${{total_budgeted}}</div>
-        <div class="card-table-heading">${{total_spent}}</div>
+        <div class="card-table-heading">${{total_spent_saved}}</div>
         <div class="card-table-heading">${{total_remaining}}</div>
         <div class="card-table-heading"></div>
     </div>
@@ -150,7 +150,12 @@
             <div>{{income.category}}</div>
             <div>{{income.date}}</div>
             <div>{{income.notes}}</div>
-            <div><a href='{% url "income_edit" pk=income.id %}?next={{request.path|urlencode}}'><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></a></div>
+            <div>
+                <div class="edit-links-container">
+                    <a href='{% url "income_edit" pk=income.id %}?next={{request.path|urlencode}}'><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></a>
+                    <a href='{% url "income_delete" pk=income.id %}?next={{request.path|urlencode}}'><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px"></a>
+                </div>
+            </div>
             {% endfor %}
         </div>
     </div>
