--- a/templates/budgets/yearly_budget_detail.html
+++ b/templates/budgets/yearly_budget_detail.html
@@ -187,7 +187,9 @@
                     <div>${{savings_item.1.amount_total}}</div>
                     <div>${{savings_item.2.saved}}</div>
                     <div>{{savings_item.3.diff}}</div>
-                    <div><a href='{% url "budgetitem_bulkedit" year=yearly_budget.date.year category=savings_item.0.category__name %}'><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></a></div>
+                    <div>
+                        <button class="button-blank" hx-get='{% url "budgetitem_bulk_edit_htmx" category=savings_item.0.category__name year=yearly_budget.date.year %}?next={{request.path|urlencode}}' hx-target="#modal-content"><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></button>
+                    </div>
                     {% endfor %}
                 </div>
                 <div class="budget-horizontal-grid-yearly budget-subtotal">
@@ -253,8 +255,8 @@
         <div>{{income.notes}}</div>
         <div>
             <div class="edit-links-container">
-                <a href='{% url "income_edit" pk=income.id %}?next={{request.path|urlencode}}'><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></a>
-                <a href='{% url "income_delete" pk=income.id %}?next={{request.path|urlencode}}'><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px"></a>
+                <button class="button-blank" hx-get='{% url "income_edit_htmx" pk=income.id %}?next={{request.path|urlencode}}' hx-target="#modal-content"><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></button>
+                <button class="button-blank" hx-get='{% url "income_delete_htmx" pk=income.id %}?next={{request.path|urlencode}}' hx-target="#modal-content"><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px"></button>
             </div>
         </div>
     {% endfor %}
@@ -282,8 +284,8 @@
         <div>{{purchase.category}}</div>
         <div>
             <div class="edit-links-container">
-                <a href='{% url "purchase_edit" pk=purchase.id %}?next={{request.path|urlencode}}'><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></a>
-                <a href='{% url "purchase_delete" pk=purchase.id %}?next={{request.path|urlencode}}'><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px"></a>
+                <button class="button-blank" hx-get='{% url "purchase_edit_htmx" pk=purchase.id %}?next={{request.path|urlencode}}' hx-target="#modal-content"><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></button>
+                <button class="button-blank" hx-get='{% url "purchase_delete_htmx" pk=purchase.id %}?next={{request.path|urlencode}}' hx-target="#modal-content"><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px"></button>
             </div>
         </div>
     </div>
