--- a/templates/budgets/budgetitem_bulk_edit_htmx.html
+++ b/templates/budgets/budgetitem_bulk_edit_htmx.html
@@ -1,5 +1,6 @@
 
 
+<h2>{{category}}</h2>
 <form hx-post='{% url "budgetitem_bulk_edit_htmx" year=year category=category %}' class="budgetitem-bulk-form" method="POST">
     {% csrf_token %}
     {{formset.management_form}}
