--- a/templates/budgets/monthly_budget_detail.html
+++ b/templates/budgets/monthly_budget_detail.html
@@ -66,7 +66,7 @@
             <div>${{budget_item.diff}}</div>
             <div>
                 <div class="edit-links-container">
-                    <a href='{% url "budgetitem_edit" year=monthly_budget.date.year month=monthly_budget.date.month category=budget_item.category.name %}'><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></a>
+                    <button class="button-blank" hx-get='{% url "budgetitem_edit_htmx" year=monthly_budget.date.year month=monthly_budget.date.month category=budget_item.category.name %}?next={{request.path|urlencode}}' hx-target="#modal-content"><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></button>
                     <a href='{% url "budget_item_delete" year=monthly_budget.date.year month=monthly_budget.date.month category=budget_item.category.name %}'><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px"></a>
                 </div>
             </div>
@@ -105,7 +105,7 @@
         <div>${{savings_item.diff}}</div>
         <div>
             <div class="edit-links-container">
-                <a href='{% url "budgetitem_edit" year=monthly_budget.date.year month=monthly_budget.date.month category=savings_item.category.name %}'><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></a>
+                <button class="button-blank" hx-get='{% url "budgetitem_edit_htmx" year=monthly_budget.date.year month=monthly_budget.date.month category=savings_item.category.name %}?next={{request.path|urlencode}}' hx-target="#modal-content"><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></button>
                 <a href='{% url "budget_item_delete" year=monthly_budget.date.year month=monthly_budget.date.month category=savings_item.category.name %}'><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px"></a>
             </div>
         </div>
