--- a/templates/budgets/yearly_budget_detail.html
+++ b/templates/budgets/yearly_budget_detail.html
@@ -136,7 +136,10 @@
                     <div>${{budget_item.1.amount_total}}</div>
                     <div>${{budget_item.2.spent}}</div>
                     <div>${{budget_item.3.diff}}</div>
-                    <div><a href='{% url "budgetitem_bulkedit" year=yearly_budget.date.year category=budget_item.0.category__name %}'><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></a></div>
+                    <div>
+                        <button class="button-blank" hx-get='{% url "budgetitem_bulk_edit_htmx" category=budget_item.0.category__name year=yearly_budget.date.year %}?next={{request.path|urlencode}}' hx-target="#modal-content"><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></button>
+                        <button class="button-blank" hx-get='{% url "budget_item_delete_htmx" category=budget_item.0.category__name year=yearly_budget.date.year %}?next={{request.path|urlencode}}' hx-target="#modal-content"><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px"></button>
+                    </div>
                     {% endfor %}
                 </div>
                 <div class="budget-horizontal-grid-yearly budget-subtotal">
@@ -189,6 +192,7 @@
                     <div>{{savings_item.3.diff}}</div>
                     <div>
                         <button class="button-blank" hx-get='{% url "budgetitem_bulk_edit_htmx" category=savings_item.0.category__name year=yearly_budget.date.year %}?next={{request.path|urlencode}}' hx-target="#modal-content"><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></button>
+                        <button class="button-blank" hx-get='{% url "budget_item_delete_htmx" category=savings_item.0.category__name year=yearly_budget.date.year %}?next={{request.path|urlencode}}' hx-target="#modal-content"><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px"></button>
                     </div>
                     {% endfor %}
                 </div>
