Move create budget link to budget list

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -511,6 +511,11 @@ h2 {
     border: none;
 }
 
+.button-budget {
+    width: fit-content;
+    margin-left: 40px;
+}
+
 .overlay {
     position: fixed;
     top: 0;
