--- a/templates/budgets/yearly_budget_detail.html
+++ b/templates/budgets/yearly_budget_detail.html
@@ -108,7 +108,7 @@
     <div class="card-base">
         <div class="card-header">
             <h2>Budget</h2>
-            <div class="card-header-action"><a href='{% url "budgetitem_create" year=yearly_budget.date.year %}'> + Add budget item</a>
+            <div class="card-header-action"><button class="button-create" hx-get='{% url "budgetitem_create_htmx" year=yearly_budget.date.year %}?next={{request.path|urlencode}}' hx-target="#modal-content"> + Add Budget Item</a>
             </div>
         </div>
         <div class="card-main">
@@ -238,7 +238,7 @@
 <div class="card-base">
     <div class="card-header">
         <h2>Income</h2>
-        <div class="card-header-action"><a href='{% url "income_add"%}?next={{request.path|urlencode}}'> + Add Income</a>
+        <div class="card-header-action"><button class="button-create" hx-get='{% url "income_create"%}?next={{request.path|urlencode}}' hx-target="#modal-content"> + Add Income</a>
         </div>
     </div>
     
