--- a/static/css/base.css
+++ b/static/css/base.css
@@ -274,6 +274,10 @@ a {
     grid-template-columns: 150px repeat(12, 200px)
 }
 
+#purchase-form-container {
+    width: 900px;
+}
+
 .purchase-form {
     display: grid;
     /* grid-template-columns: 1fr 1fr 1fr repeat(5, 1fr); */
@@ -311,6 +315,15 @@ h2 {
 .purchase-form select,
 .purchase-form textarea {
     width: 90%;
+}
+
+.page-header-action {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 5px;
+    border-radius: 10px;
+    margin-top: 20px;
 }
 
 
