Move focus in purchase add modal

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -77,6 +77,11 @@
     htmx.on("htmx:afterSwap", (e) => {
         if (e.detail.target.id == "modal-content") {
           showModal()
+          const dateInput = document.querySelector("#id_form-0-date")
+
+          if (dateInput){
+            dateInput.focus()
+          }
         }
       })
 
